<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
<string name="app_name">BrowserHook</string>

<string name="TextViewTITLE">Conversion service name</string>
<string name="TextViewURL">convert gateway url</string>
<string name="TextViewAPP">App name to open URL</string>
<string name="TextViewACTV">Activity to receive intent</string>
<string name="TextViewORDER">order to show this item</string>

<string name="ButtonOK">Save</string>
<string name="ButtonCancel">Cancel</string>
<string name="ButtonDirect">go direct</string>
<string name="ButtonConvert">convert</string>
<string name="ButtonSetting">setting</string>
<string name="ButtonHistory">history</string>
<string name="ButtonClearHistory">Clear</string>

<string name="CheckboxIgnoreHistory">Disable history</string>

<string name="menu_insert">Add</string>
<string name="menu_delete">Delete</string>
<string name="menu_edit">Edit</string>
<string name="menu_import">SD:import</string>
<string name="menu_export">SD:export</string>
<string name="menu_initialize">Initialize</string>
<string name="menu_history">History</string>
<string name="menu_setting">Setting</string>
<string name="menu_browser">Open browser</string>
<string name="menu_share">Share URL</string>

<string name="alert_init_title">Initialize</string>
<string name="alert_init_msg">Initialize All items. Are you sure?</string>

<string name="spinnerPrompt_browser">Browsers</string>
<string name="spinnerPrompt_converter">Converters</string>

<string name="apptitle_main">conv.</string>
<string name="apptitle_main_standalone">please select item to edit.</string>
<string name="apptitle_edit">edit the conversion item.</string>
<string name="apptitle_history">History</string>

</resources>
