<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_height="wrap_content"
  android:layout_width="fill_parent">
  <ScrollView android:layout_marginBottom="50dip" android:id="@+id/ScrollView01"
    android:layout_height="wrap_content" android:layout_width="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content" android:orientation="vertical">

      <TextView android:text="@string/TextViewTITLE" android:id="@+id/TextViewTITLE"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
      <EditText android:text="@+id/EditTextTITLE" android:id="@+id/EditTextTITLE"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:typeface="monospace" />

      <TextView android:text="@string/TextViewURL" android:id="@+id/TextViewURL"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
      <EditText android:text="@+id/EditTextURL" android:id="@+id/EditTextURL"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:typeface="monospace" />


      <TextView android:text="@string/TextViewORDER" android:id="@+id/TextViewORDER"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />
      <EditText android:text="@+id/EditTextORDER" android:id="@+id/EditTextORDER"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:numeric="integer" />

    </LinearLayout>
  </ScrollView>
  <RelativeLayout android:layout_marginTop="-50dip"
    android:gravity="bottom" android:layout_height="wrap_content"
    android:layout_width="fill_parent" android:orientation="horizontal">
    <Button android:text="@string/ButtonOK" android:id="@+id/ButtonOK"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </RelativeLayout>
</LinearLayout>

